Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOtsk64i2R8HkKz8NPXIG5M",
+      "authorship_tag": "ABX9TyMbu+aBAK8PrJAtIgnaoDg3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7225,7 +7225,7 @@
         "id": "uPXzp27pRtie"
       },
       "source": [
-        "####"
+        "#### 1076번"
       ]
     },
     {
@@ -7234,7 +7234,23 @@
         "id": "4dmEgiLmRtie"
       },
       "source": [
-        ""
+        "dic = {'black' : [0,1],\n",
+        "       'brown' : [1,10],\n",
+        "       'red' : [2,100],\n",
+        "       'orange' : [3,1000],\n",
+        "       'yellow' : [4,10000],\n",
+        "       'green' : [5,100000],\n",
+        "       'blue' : [6,1000000],\n",
+        "       'violet' : [7,10000000],\n",
+        "       'grey' : [8,100000000],\n",
+        "       'white' : [9,1000000000]}\n",
+        "\n",
+        "res = 0\n",
+        "\n",
+        "res += dic[input()][0] * 10\n",
+        "res += dic[input()][0]\n",
+        "res *= dic[input()][1]\n",
+        "print(res)"
       ],
       "execution_count": null,
       "outputs": []
