--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMbu+aBAK8PrJAtIgnaoDg3",
+      "authorship_tag": "ABX9TyNlPmymZHgVzQWE4I+gOwGS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7261,7 +7261,7 @@
         "id": "NmN8u0qcRtlf"
       },
       "source": [
-        "####"
+        "#### 1408번"
       ]
     },
     {
@@ -7270,7 +7270,34 @@
         "id": "W-wpfsVHRtlf"
       },
       "source": [
-        ""
+        "t = list(map(int,input().split(':')))\n",
+        "start_time = list(map(int,input().split(':')))\n",
+        "\n",
+        "if int(t[0]) > int(start_time[0]):\n",
+        "    start_time[0] = start_time[0] + 24\n",
+        "\n",
+        "res = [0,0,0]\n",
+        "\n",
+        "for i in range(-1,-4,-1):\n",
+        "    if start_time[i] < 0:\n",
+        "        start_time[i-1] = start_time[i-1] -1\n",
+        "        start_time[i] = start_time[i] + 60\n",
+        "\n",
+        "    if start_time[i] - t[i] < 0:\n",
+        "        start_time[i-1] = start_time[i-1] -1 \n",
+        "        start_time[i] = start_time[i] + 60\n",
+        "\n",
+        "    res[i] = start_time[i] - t[i]\n",
+        "\n",
+        "for i in range(3):\n",
+        "    if res[i] < 10:\n",
+        "        res[i] = '0' + str(res[i])\n",
+        "    else:\n",
+        "        res[i] = str(res[i])\n",
+        "\n",
+        "for i in range(2):\n",
+        "    print(res[i],end=':')\n",
+        "print(res[-1])"
       ],
       "execution_count": null,
       "outputs": []
