Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNlPmymZHgVzQWE4I+gOwGS",
+      "authorship_tag": "ABX9TyN5yf0GDkp9HQIytoQdYwM5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6593,52 +6593,45 @@
         "id": "nky_PfziMA-9"
       },
       "source": [
-        "####  1300번"
+        "####  (***)1300번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EG7quulgMA--",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "61b8fda0-64ca-4046-b1cb-5166fbda191c"
+        "id": "EG7quulgMA--"
       },
       "source": [
+        "\n",
+        "# https://blog.naver.com/crm06217/222021716929\n",
+        "# 행렬 풀이\n",
         "n = int(input())\n",
         "k = int(input())\n",
         "\n",
-        "start = 0\n",
-        "end = n*n - 1\n",
+        "start = 1\n",
+        "end = k\n",
         "\n",
         "while True:\n",
-        "    mid = (start+end) // 2\n",
+        "    if start >= end:\n",
+        "        mid = (start + end) // 2\n",
+        "        break\n",
         "\n",
+        "    mid = (start + end) // 2\n",
+        "    \n",
+        "    t = 0\n",
+        "    for i in range(1,n+1):\n",
+        "        t += min(n, mid // i)\n",
+        "    \n",
+        "    if t < k:\n",
+        "        start = mid + 1\n",
+        "    else:\n",
+        "        end = mid\n",
+        "    #print(start,mid,end)\n",
         "\n",
-        "1  2  3  4  5\n",
-        "2  4  6  8 10\n",
-        "3  6  9 12 15\n",
-        "4  8 12 16 20 \n",
-        "5 10 15 20 25\n",
-        "\n",
-        "\n",
-        "1 0\n",
-        "\n",
-        "25 20 20 16 15 15 12 12 10 10 9 9 8 8 6 6 5 5 4 4 4 3 3 2 2 1"
+        "print(mid)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "7\n",
-            "6\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
