Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,8 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyN5yf0GDkp9HQIytoQdYwM5",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOawdgaNFtzu7D3HS9kFPHj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6639,7 +6640,7 @@
         "id": "QeNapogXMBDG"
       },
       "source": [
-        "#### "
+        "####  (***)12015번"
       ]
     },
     {
@@ -6648,7 +6649,37 @@
         "id": "VaaqTU4mMBDG"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "l = list(map(int, input().split()))\n",
+        "\n",
+        "def binary_search(arr, t):\n",
+        "    start = 0\n",
+        "    end = len(arr) - 1\n",
+        "\n",
+        "    while True:\n",
+        "        if start >= end:\n",
+        "            mid = (start + end) // 2\n",
+        "            return mid\n",
+        "        \n",
+        "        mid = (start + end) // 2\n",
+        "\n",
+        "        if arr[mid] < t:\n",
+        "            start = mid + 1\n",
+        "        else:\n",
+        "            end = mid\n",
+        "\n",
+        "    return mid\n",
+        "\n",
+        "res = [l[0]] \n",
+        "\n",
+        "for i in range(1,n):\n",
+        "    if res[-1] < l[i]:\n",
+        "        res.append(l[i])\n",
+        "    else:\n",
+        "        t = binary_search(res, l[i])\n",
+        "        res[t] = l[i]\n",
+        "\n",
+        "print(len(res))"
       ],
       "execution_count": null,
       "outputs": []
