Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "HNMURhhYKntw"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOawdgaNFtzu7D3HS9kFPHj",
+      "authorship_tag": "ABX9TyN9mG+oQ3pi1srUe8LlGKAf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6690,7 +6690,7 @@
         "id": "Jc_IjbKpL6wm"
       },
       "source": [
-        "### **단계 : ===========**"
+        "### 22단계 : 우선순위 큐===========**"
       ]
     },
     {
@@ -6699,13 +6699,157 @@
         "id": "RQtuu3rBL6wn"
       },
       "source": [
-        "#### "
+        "####  11279번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "88W--dAXL6wn"
+      },
+      "source": [
+        "#import heapq as hq\n",
+        "# https://www.fun-coding.org/Chapter11-heap.html\n",
+        "\n",
+        "# 부모 노드 인덱스 = 자식 노드 인덱스 // 2\n",
+        "# 왼쪽 자식 노드 인덱스 = 부모 노드 인덱스 * 2\n",
+        "# 오른쪽 자식 노드 인덱스 = 부모 노드 인덱스 * 2 + 1\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "n = int(sys.stdin.readline())\n",
+        "\n",
+        "queue = [None]\n",
+        "for _ in range(n):\n",
+        "    t = int(sys.stdin.readline())\n",
+        "\n",
+        "    if not t:\n",
+        "        if len(queue) == 1:\n",
+        "            print(0)\n",
+        "        else:\n",
+        "            print(queue[1])\n",
+        "            popped_idx = 1\n",
+        "            queue[1] = queue[-1]            \n",
+        "            #queue = queue[:-1] => 시간초과\n",
+        "            queue.pop()\n",
+        "\n",
+        "            while True:\n",
+        "                left_child_idx = popped_idx * 2\n",
+        "                right_child_idx = popped_idx * 2 + 1\n",
+        "\n",
+        "                if left_child_idx >= len(queue):\n",
+        "                    break\n",
+        "\n",
+        "                elif right_child_idx >= len(queue):\n",
+        "                    if queue[popped_idx] < queue[left_child_idx]:\n",
+        "                        queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                        popped_idx = left_child_idx\n",
+        "                    else:\n",
+        "                        break\n",
+        "                else:\n",
+        "                    if queue[left_child_idx] > queue[right_child_idx]:\n",
+        "                        if queue[popped_idx] < queue[left_child_idx]:\n",
+        "                            queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = left_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "                    else:\n",
+        "                        if queue[popped_idx] < queue[right_child_idx]:\n",
+        "                            queue[popped_idx], queue[right_child_idx] = queue[right_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = right_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "\n",
+        "    else:\n",
+        "        if len(queue) == 1:\n",
+        "            queue.append(t)\n",
+        "\n",
+        "        else:\n",
+        "            queue.append(t)\n",
+        "            insert_idx = len(queue) - 1\n",
+        "\n",
+        "            while True:\n",
+        "                parent_idx = insert_idx // 2\n",
+        "\n",
+        "                if insert_idx <= 1:\n",
+        "                    break              \n",
+        "\n",
+        "                if queue[parent_idx] >= queue[insert_idx]:\n",
+        "                    break\n",
+        "\n",
+        "                queue[parent_idx], queue[insert_idx] = queue[insert_idx], queue[parent_idx]\n",
+        "                insert_idx = parent_idx"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dvilZylEEd8J"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PLRBRMchEd8J",
+        "outputId": "ecef35aa-be7d-4c62-815a-d35d003f592a"
+      },
+      "source": [
+        "list = [1,2,3]\n",
+        "list.pop()\n",
+        "print(list)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mN7qeEYqEeOw"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lZgm01QJEeOx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "73tjDp6eEeTb"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3692VFQHEeTc"
       },
       "source": [
         ""
