Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,8 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyN9mG+oQ3pi1srUe8LlGKAf",
+      "authorship_tag": "ABX9TyMkCU/GZd4DqwBkGuXfTmEZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6699,7 +6698,7 @@
         "id": "RQtuu3rBL6wn"
       },
       "source": [
-        "####  11279번"
+        "####  (최대 힙)11279번"
       ]
     },
     {
@@ -6789,7 +6788,7 @@
         "id": "dvilZylEEd8J"
       },
       "source": [
-        "#### "
+        "####  (최소 힙)1927번"
       ]
     },
     {
@@ -6802,11 +6801,71 @@
         "outputId": "ecef35aa-be7d-4c62-815a-d35d003f592a"
       },
       "source": [
-        "list = [1,2,3]\n",
-        "list.pop()\n",
-        "print(list)"
+        "import sys\n",
+        "\n",
+        "n = int(sys.stdin.readline())\n",
+        "\n",
+        "queue = [None]\n",
+        "for _ in range(n):\n",
+        "    t = int(sys.stdin.readline())\n",
+        "\n",
+        "    if not t:\n",
+        "        if len(queue) == 1:\n",
+        "            print(0)\n",
+        "        else:\n",
+        "            print(queue[1])\n",
+        "            popped_idx = 1\n",
+        "            queue[1] = queue[-1]            \n",
+        "            queue.pop()\n",
+        "\n",
+        "            while True:\n",
+        "                left_child_idx = popped_idx * 2\n",
+        "                right_child_idx = popped_idx * 2 + 1\n",
+        "\n",
+        "                if left_child_idx >= len(queue):\n",
+        "                    break\n",
+        "\n",
+        "                elif right_child_idx >= len(queue):\n",
+        "                    if queue[popped_idx] > queue[left_child_idx]:\n",
+        "                        queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                        popped_idx = left_child_idx\n",
+        "                    else:\n",
+        "                        break\n",
+        "                else:\n",
+        "                    if queue[left_child_idx] < queue[right_child_idx]:\n",
+        "                        if queue[popped_idx] > queue[left_child_idx]:\n",
+        "                            queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = left_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "                    else:\n",
+        "                        if queue[popped_idx] > queue[right_child_idx]:\n",
+        "                            queue[popped_idx], queue[right_child_idx] = queue[right_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = right_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "\n",
+        "    else:\n",
+        "        if len(queue) == 1:\n",
+        "            queue.append(t)\n",
+        "\n",
+        "        else:\n",
+        "            queue.append(t)\n",
+        "            insert_idx = len(queue) - 1\n",
+        "\n",
+        "            while True:\n",
+        "                parent_idx = insert_idx // 2\n",
+        "\n",
+        "                if insert_idx <= 1:\n",
+        "                    break              \n",
+        "\n",
+        "                if queue[parent_idx] <= queue[insert_idx]:\n",
+        "                    break\n",
+        "\n",
+        "                queue[parent_idx], queue[insert_idx] = queue[insert_idx], queue[parent_idx]\n",
+        "                insert_idx = parent_idx"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
