Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMkCU/GZd4DqwBkGuXfTmEZ",
+      "authorship_tag": "ABX9TyOstyH44CNJF4dObOLAGG4B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6882,7 +6882,7 @@
         "id": "mN7qeEYqEeOw"
       },
       "source": [
-        "#### "
+        "####  11286번"
       ]
     },
     {
@@ -6891,7 +6891,98 @@
         "id": "lZgm01QJEeOx"
       },
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "n = int(sys.stdin.readline())\n",
+        "#n = int(input())\n",
+        "\n",
+        "queue = [None]\n",
+        "for _ in range(n):\n",
+        "    t = int(sys.stdin.readline())\n",
+        "    #t = int(input())\n",
+        "    \n",
+        "    #print(queue)\n",
+        "    if not t: # 입력 받은 값이 0일 떄\n",
+        "        if len(queue) == 1: # queue가 빈공간이면\n",
+        "            print(0)\n",
+        "        else: # queue가 빈 공간이 아닐 때\n",
+        "            print(queue[1])\n",
+        "            popped_idx = 1\n",
+        "            queue[1] = queue[-1]            \n",
+        "            queue.pop()\n",
+        "\n",
+        "            while True:\n",
+        "                left_child_idx = popped_idx * 2 # 왼쪽 자식 idx\n",
+        "                right_child_idx = popped_idx * 2 + 1 # 오른쪽 자식 idx\n",
+        "\n",
+        "                if left_child_idx >= len(queue): # 왼쪽 자식 노드가 없으면\n",
+        "                    break # 종료\n",
+        "\n",
+        "                elif right_child_idx >= len(queue): # 왼쪽 자식 노드만 있는 경우\n",
+        "                    if abs(queue[popped_idx]) > abs(queue[left_child_idx]): # 왼쪽 자식의 절댓값이 작은경우\n",
+        "                        queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                        popped_idx = left_child_idx\n",
+        "\n",
+        "                    elif abs(queue[popped_idx]) == abs(queue[left_child_idx]) and queue[popped_idx] > queue[left_child_idx]: # 왼쪽 자식과 절댓값이 같은 경우\n",
+        "                        queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                        popped_idx = left_child_idx\n",
+        "\n",
+        "                    else: # 왼쪽 자식의 절댓값이 큰 경우\n",
+        "                        break\n",
+        "\n",
+        "                else: # 왼쪽, 오른쪽 자식 노드가 모두 있는경우\n",
+        "                    if abs(queue[left_child_idx]) < abs(queue[right_child_idx]): # 왼쪽 노드의 절댓값이 오른쪽 보다 작은 경우\n",
+        "                        if abs(queue[popped_idx]) > abs(queue[left_child_idx]): # popped_idx의 왼쪽 자식 노드의 절댓값이 더 작은 경우\n",
+        "                            queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = left_child_idx\n",
+        "                        elif abs(queue[popped_idx]) == abs(queue[left_child_idx]) and queue[left_child_idx ] < queue[popped_idx]: # popped_idx와 왼쪽 자식 노드의 절댓값이 같은 경우\n",
+        "                            queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = left_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "\n",
+        "                    elif abs(queue[left_child_idx]) == abs(queue[right_child_idx]) and queue[left_child_idx] < queue[right_child_idx]: # 왼쪽과 오른쪽 자식 노드의 절댓값이 같은경우\n",
+        "                        if abs(queue[popped_idx]) > abs(queue[left_child_idx]): # popped_idx의 왼쪽 자식 노드의 절댓값이 더 작은 경우\n",
+        "                            queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = left_child_idx\n",
+        "                        elif abs(queue[popped_idx]) == abs(queue[left_child_idx]) and queue[left_child_idx ] < queue[popped_idx]: # popped_idx와 왼쪽 자식 노드의 절댓값이 같은 경우\n",
+        "                            queue[popped_idx], queue[left_child_idx] = queue[left_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = left_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "    \n",
+        "                    else: # 오른쪽 자식 노드의 절댓값이 큰 경우\n",
+        "                        if abs(queue[popped_idx]) > abs(queue[right_child_idx]): # popped_idx의 오른쪽 자식 노드의 절댓값이 더 작은 경우\n",
+        "                            queue[popped_idx], queue[right_child_idx] = queue[right_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = right_child_idx\n",
+        "                        elif abs(queue[popped_idx]) == abs(queue[right_child_idx]) and queue[right_child_idx ] < queue[popped_idx]: # popped_idx와 오른쪽 자식 노드의 절댓값이 같은 경우\n",
+        "                            queue[popped_idx], queue[right_child_idx] = queue[right_child_idx], queue[popped_idx]\n",
+        "                            popped_idx = right_child_idx\n",
+        "                        else:\n",
+        "                            break\n",
+        "\n",
+        "    else: # insert(t)\n",
+        "        if len(queue) == 1: # queue의 값이 없을 때\n",
+        "            queue.append(t)\n",
+        "\n",
+        "        else: # queue에 값이 있을 때\n",
+        "            queue.append(t)\n",
+        "            insert_idx = len(queue) - 1\n",
+        "\n",
+        "            while True:\n",
+        "                parent_idx = insert_idx // 2 # 부모 idx\n",
+        "\n",
+        "                if insert_idx <= 1: # indert_id가 1번째 시드에 있으면\n",
+        "                    break              \n",
+        "\n",
+        "                if abs(queue[parent_idx]) > abs(queue[insert_idx]): # 입력 idx의 부모보다 절댓값이 작으면\n",
+        "                    queue[parent_idx], queue[insert_idx] = queue[insert_idx], queue[parent_idx]\n",
+        "                    insert_idx = parent_idx\n",
+        "                elif abs(queue[parent_idx]) == abs(queue[insert_idx]) and queue[parent_idx] > queue[insert_idx]: # 입력 idx의 부모보다 절댓값이 같을 때\n",
+        "                    queue[parent_idx], queue[insert_idx] = queue[insert_idx], queue[parent_idx]\n",
+        "                    insert_idx = parent_idx\n",
+        "                else:\n",
+        "                    break"
       ],
       "execution_count": null,
       "outputs": []
@@ -6908,13 +6999,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3692VFQHEeTc"
+        "id": "3692VFQHEeTc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "outputId": "45517525-86a1-476b-9deb-56ab7aec0b2f"
       },
       "source": [
-        ""
+        "list = (1,2,3,4)\n",
+        "list[1] = 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-5b8a5ab43384>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
