--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOstyH44CNJF4dObOLAGG4B",
+      "authorship_tag": "ABX9TyPrTNC+EflFQB2ACDmhaZHC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6993,37 +6993,91 @@
         "id": "73tjDp6eEeTb"
       },
       "source": [
-        "#### "
+        "####  1655번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3692VFQHEeTc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "outputId": "45517525-86a1-476b-9deb-56ab7aec0b2f"
+        "id": "3692VFQHEeTc"
       },
       "source": [
-        "list = (1,2,3,4)\n",
-        "list[1] = 3"
+        "### 힙정렬 시간초과\n",
+        "import sys\n",
+        "\n",
+        "#n = int(sys.stdin.readline())\n",
+        "n = int(input())\n",
+        "\n",
+        "queue = [-10001]\n",
+        "queue.append(int(input()))\n",
+        "#queue.append(int(sys.stdin.readline()))\n",
+        "print(queue[len(queue) // 2])\n",
+        "\n",
+        "for _ in range(n-1):\n",
+        "    #t = int(sys.stdin.readline())\n",
+        "    t = int(input())\n",
+        "    queue.append(t)\n",
+        "    insert_idx = len(queue) - 1\n",
+        "\n",
+        "    while True:\n",
+        "        parent_idx = insert_idx // 2\n",
+        "\n",
+        "        if queue[parent_idx] <= queue[insert_idx]:\n",
+        "            while insert_idx > parent_idx:\n",
+        "                if queue[insert_idx] < queue[insert_idx - 1]:\n",
+        "                    queue[insert_idx - 1], queue[insert_idx] = queue[insert_idx], queue[insert_idx - 1]\n",
+        "                    insert_idx = insert_idx - 1\n",
+        "                else:\n",
+        "                    break\n",
+        "\n",
+        "            break\n",
+        "        else:\n",
+        "            queue[parent_idx], queue[insert_idx] = queue[insert_idx], queue[parent_idx]\n",
+        "            \n",
+        "            while insert_idx > parent_idx:\n",
+        "                if queue[insert_idx] < queue[insert_idx - 1]:\n",
+        "                    queue[insert_idx - 1], queue[insert_idx] = queue[insert_idx], queue[insert_idx - 1]\n",
+        "                    insert_idx = insert_idx - 1\n",
+        "                else:\n",
+        "                    break\n",
+        "\n",
+        "            insert_idx = parent_idx\n",
+        "\n",
+        "    print('queue : ',queue)\n",
+        "    print('ans : ',queue[len(queue) // 2])"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-5b8a5ab43384>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys, heapq\n",
+        "\n",
+        "n = int(sys.stdin.readline())\n",
+        "\n",
+        "left_queue = []\n",
+        "right_queue = []\n",
+        "\n",
+        "for i in range(n):\n",
+        "    t = int(sys.stdin.readline())\n",
+        "\n",
+        "    if i % 2:\n",
+        "        heapq.heappush(right_queue, t)\n",
+        "    else:\n",
+        "        heapq.heappush(left_queue, -t)\n",
+        "    \n",
+        "    if right_queue and -left_queue[0] > right_queue[0]:\n",
+        "        heapq.heappush(right_queue, -heapq.heappop(left_queue))\n",
+        "        heapq.heappush(left_queue, -heapq.heappop(right_queue))\n",
+        "\n",
+        "    print(-left_queue[0])"
+      ],
+      "metadata": {
+        "id": "KhnNbpCg95-1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
