--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPrTNC+EflFQB2ACDmhaZHC",
+      "authorship_tag": "ABX9TyOJ8P2UIBTSwwUwNGtVDjVc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6993,7 +6993,7 @@
         "id": "73tjDp6eEeTb"
       },
       "source": [
-        "####  1655번"
+        "####  (***)1655번 : heapq 모듈 사용 안하고 불가능한가?"
       ]
     },
     {
@@ -7698,13 +7698,64 @@
         "id": "rJALFDucRtoU"
       },
       "source": [
-        "####"
+        "#### 1100번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2PFjWPFpRtoU"
+      },
+      "source": [
+        "t = 0\n",
+        "for i in range(1,9):\n",
+        "    l = input()\n",
+        "    if i % 2: # 홀수\n",
+        "        for j in range(0,8,2):\n",
+        "            if l[j] == 'F':\n",
+        "                t += 1\n",
+        "    else: # 짝수\n",
+        "        for j in range(1,8,2):\n",
+        "            if l[j] == 'F':\n",
+        "                t += 1\n",
+        "print(t)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PF-e7T96nF2u"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kfVvwGjbnF22"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cAltWVGrnF7J"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Bb39HSWnF7J"
       },
       "source": [
         ""
