Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOJ8P2UIBTSwwUwNGtVDjVc",
+      "authorship_tag": "ABX9TyO6nHcj9V6ID9KBIHEwYzU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7729,7 +7729,7 @@
         "id": "PF-e7T96nF2u"
       },
       "source": [
-        "####"
+        "#### 1145번"
       ]
     },
     {
@@ -7738,7 +7738,23 @@
         "id": "kfVvwGjbnF22"
       },
       "source": [
-        ""
+        "l = list(map(int, input().split()))\n",
+        "\n",
+        "res = min(l)\n",
+        "while True:\n",
+        "    t = 0\n",
+        "    for j in l:\n",
+        "        if not res % j: # res가 l 값들 중 하나로 나뉘어 진다면\n",
+        "            t += 1\n",
+        "\n",
+        "        if t > 2:\n",
+        "            print(res)\n",
+        "            break\n",
+        "\n",
+        "    if t > 2:\n",
+        "        break\n",
+        "\n",
+        "    res += 1"
       ],
       "execution_count": null,
       "outputs": []
@@ -7755,13 +7771,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0Bb39HSWnF7J"
+        "id": "0Bb39HSWnF7J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1aa0388a-6cb7-41b2-a8d3-89c6cdd82dc7"
       },
       "source": [
-        ""
+        "not 1 % 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
