Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyO6nHcj9V6ID9KBIHEwYzU2",
+      "authorship_tag": "ABX9TyP2XTkwS9/xDXryqs+JFiYs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7765,34 +7765,99 @@
         "id": "cAltWVGrnF7J"
       },
       "source": [
+        "#### 1159번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Bb39HSWnF7J"
+      },
+      "source": [
+        "n = int(input())\n",
+        "res = {}\n",
+        "for _ in range(n):\n",
+        "    t = input()\n",
+        "    \n",
+        "    if t[0] in res:\n",
+        "        res[t[0]] += 1\n",
+        "    else:\n",
+        "        res[t[0]] = 1\n",
+        "\n",
+        "result = []\n",
+        "for k, v in res.items():\n",
+        "    if v > 4:\n",
+        "        result.append(k)\n",
+        "\n",
+        "result.sort()\n",
+        "if not result:\n",
+        "    print('PREDAJA')\n",
+        "else:\n",
+        "    for i in result:\n",
+        "        print(i,end='')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rx4yoDQdzb1M"
+      },
+      "source": [
         "####"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0Bb39HSWnF7J",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1aa0388a-6cb7-41b2-a8d3-89c6cdd82dc7"
+        "id": "MZ_26Hxazb1O"
       },
       "source": [
-        "not 1 % 1"
+        ""
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GeLDsmu6zb5D"
+      },
+      "source": [
+        "####"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Viiv5quzb5D"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QtKXQ-B6zb8r"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sL5D4Z7Jzb8r"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
