Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyP2XTkwS9/xDXryqs+JFiYs",
+      "authorship_tag": "ABX9TyMequSNQLPFsl3/AI5sm+Ps",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7805,7 +7805,7 @@
         "id": "rx4yoDQdzb1M"
       },
       "source": [
-        "####"
+        "#### 1233번"
       ]
     },
     {
@@ -7814,7 +7814,26 @@
         "id": "MZ_26Hxazb1O"
       },
       "source": [
-        ""
+        "a, b, c = map(int, input().split())\n",
+        "\n",
+        "res = {}\n",
+        "for i in range(1,a+1):\n",
+        "    for j in range(1, b+1):\n",
+        "        for k in range(1,c+1):\n",
+        "            t = i+j+k\n",
+        "            #print(t)\n",
+        "            if t in res:\n",
+        "                res[t] += 1\n",
+        "            else:\n",
+        "                res[t] = 1\n",
+        "\n",
+        "result = []\n",
+        "for k, v in res.items():\n",
+        "    if v == max(res.values()):\n",
+        "        result.append(k)\n",
+        "\n",
+        "result.sort()\n",
+        "print(result[0])"
       ],
       "execution_count": null,
       "outputs": []
