--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMequSNQLPFsl3/AI5sm+Ps",
+      "authorship_tag": "ABX9TyO7uw4E0pfjRPiqv54lifpm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7076,6 +7076,288 @@
       "metadata": {
         "id": "KhnNbpCg95-1"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vUcr9l-QBV2m"
+      },
+      "source": [
+        "### 23단계 : 동적계획법2===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HXmexh_cBV2o"
+      },
+      "source": [
+        "####  (*****)11066번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float('inf') > 999"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DYw9585BgaNo",
+        "outputId": "3c28b60e-29d1-4ba0-ae65-d11d04e8d357"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WET29noWBV2p"
+      },
+      "source": [
+        "#O(n^3)\n",
+        "# bottom up\n",
+        "# https://www.youtube.com/watch?v=4OdIDIYLHlY\n",
+        "\n",
+        "import sys\n",
+        "n = int(input())\n",
+        "\n",
+        "for _ in range(n):\n",
+        "    k = int(sys.stdin.readline())\n",
+        "    l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "\n",
+        "    dp = [[False] * (k) for _ in range(k)]\n",
+        "    \n",
+        "    for j in range(1,k):\n",
+        "        for i in range(j-1,-1,-1):\n",
+        "            small = float('inf')\n",
+        "            for q in range(j-i):\n",
+        "                small = min(small, dp[i][i+q] + dp[i+q+1][j])\n",
+        "            dp[i][j] = small + sum(l[i:j+1])\n",
+        "\n",
+        "    print(dp[0][k-1])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rh9vFZIYBfGW"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c_cu5uUnBfGX"
+      },
+      "source": [
+        "t = int(input())\n",
+        "\n",
+        "for tc in range(t):\n",
+        "    k = int(input())\n",
+        "    a = [0] + [*map(int, input().split())]\n",
+        "    inf = 10 ** 9\n",
+        "    d = [[inf] * (k + 1) for _ in range(k + 1)]\n",
+        "    s = [0] * (k + 1)\n",
+        "    for i in range(1, k):\n",
+        "        d[i][i] = 0\n",
+        "        d[i][i + 1] = a[i] + a[i + 1]\n",
+        "        s[i] = s[i - 1] + a[i]\n",
+        "    d[k][k] = 0\n",
+        "    \n",
+        "    s[k] = s[k - 1] + a[k]\n",
+        "    print(s)\n",
+        "    for sec in range(2, k): # 2 3\n",
+        "        for i in range(1, k - sec + 1): # 1 ~ 2, 1 ~ 1\n",
+        "            j = i + sec # 1 3\n",
+        "            for x in range(i, j): # 1, 3 x : 1 ~ 2\n",
+        "                print(i,j)\n",
+        "                d[i][j] = min(d[i][j], d[i][x] + d[x + 1][j] + (s[j] - s[i - 1]))\n",
+        "                print(d[i][x])\n",
+        "                print(d[x + 1][j])\n",
+        "                print(s[j] - s[i - 1])\n",
+        "            print('---------------------')\n",
+        "            for q in d:\n",
+        "                print(q)\n",
+        "\n",
+        "    print(d[1][k])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mojqkuQlBfMe"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1wrgab6JBfMe"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZZhvFpbMBfQ5"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6aZjr4sfBfQ5"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UqLzpclrBfVJ"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EqURMFb1BfVK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t2tEp1nNBfZp"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rGOUdWM1BfZp"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fDV6tkrLBfeE"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bYJjc5QVBfeF"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PkFTWJFFBZxw"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TnrDs0kMBZxw"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VdZ0HlHIBZxx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z02YtuKLBZ4I"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OgYoF6xMBZ4I"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ThAug-rvBZ4I"
+      },
+      "source": [
+        ""
+      ],
       "execution_count": null,
       "outputs": []
     },
