Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -124,6 +124,8 @@
         "C8-hqFACoskw",
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
+        "PkFTWJFFBZxw",
+        "z02YtuKLBZ4I",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -134,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyO7uw4E0pfjRPiqv54lifpm",
+      "authorship_tag": "ABX9TyNQIczunAB0tMalCCMBcvmt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7099,32 +7101,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "float('inf') > 999"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DYw9585BgaNo",
-        "outputId": "3c28b60e-29d1-4ba0-ae65-d11d04e8d357"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "WET29noWBV2p"
       },
@@ -7132,7 +7108,7 @@
         "#O(n^3)\n",
         "# bottom up\n",
         "# https://www.youtube.com/watch?v=4OdIDIYLHlY\n",
-        "\n",
+        "# 어렵다 아직 잘 모르겠음('21.12.15)\n",
         "import sys\n",
         "n = int(input())\n",
         "\n",
@@ -7169,36 +7145,7 @@
         "id": "c_cu5uUnBfGX"
       },
       "source": [
-        "t = int(input())\n",
-        "\n",
-        "for tc in range(t):\n",
-        "    k = int(input())\n",
-        "    a = [0] + [*map(int, input().split())]\n",
-        "    inf = 10 ** 9\n",
-        "    d = [[inf] * (k + 1) for _ in range(k + 1)]\n",
-        "    s = [0] * (k + 1)\n",
-        "    for i in range(1, k):\n",
-        "        d[i][i] = 0\n",
-        "        d[i][i + 1] = a[i] + a[i + 1]\n",
-        "        s[i] = s[i - 1] + a[i]\n",
-        "    d[k][k] = 0\n",
-        "    \n",
-        "    s[k] = s[k - 1] + a[k]\n",
-        "    print(s)\n",
-        "    for sec in range(2, k): # 2 3\n",
-        "        for i in range(1, k - sec + 1): # 1 ~ 2, 1 ~ 1\n",
-        "            j = i + sec # 1 3\n",
-        "            for x in range(i, j): # 1, 3 x : 1 ~ 2\n",
-        "                print(i,j)\n",
-        "                d[i][j] = min(d[i][j], d[i][x] + d[x + 1][j] + (s[j] - s[i - 1]))\n",
-        "                print(d[i][x])\n",
-        "                print(d[x + 1][j])\n",
-        "                print(s[j] - s[i - 1])\n",
-        "            print('---------------------')\n",
-        "            for q in d:\n",
-        "                print(q)\n",
-        "\n",
-        "    print(d[1][k])"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -8126,7 +8073,7 @@
         "id": "GeLDsmu6zb5D"
       },
       "source": [
-        "####"
+        "#### 1212번"
       ]
     },
     {
@@ -8135,7 +8082,10 @@
         "id": "8Viiv5quzb5D"
       },
       "source": [
-        ""
+        "t = '0O' + input()\n",
+        "\n",
+        "t = int(t, 8)\n",
+        "print(bin(t)[2:])"
       ],
       "execution_count": null,
       "outputs": []
@@ -8151,14 +8101,59 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "oct(10)"
+      ],
       "metadata": {
-        "id": "sL5D4Z7Jzb8r"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6xrW1gtgbnRp",
+        "outputId": "acd71ee1-4f3c-4554-e03d-dccd2bf038bd"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sL5D4Z7Jzb8r",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1d29379f-2378-42ff-a767-44f409582420"
       },
       "source": [
-        ""
+        "bin(10)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'0b1010'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     }
   ]
 }
