Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNQIczunAB0tMalCCMBcvmt",
+      "authorship_tag": "ABX9TyPH94Xz0AZHV/J2+imsrGTi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8096,64 +8096,142 @@
         "id": "QtKXQ-B6zb8r"
       },
       "source": [
-        "####"
+        "#### 1225번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "oct(10)"
+        "a, b = input().split()\n",
+        "\n",
+        "t = 0\n",
+        "for i in b:\n",
+        "    if i == 0:\n",
+        "        continue\n",
+        "    x = 0\n",
+        "    for j in a:\n",
+        "        x += int(j)\n",
+        "    t += x * int(i)\n",
+        "print(t)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6xrW1gtgbnRp",
-        "outputId": "acd71ee1-4f3c-4554-e03d-dccd2bf038bd"
+        "outputId": "daf6e0c6-acbd-42b9-d5d9-a3e674cb40c7"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "121 34\n",
+            "28\n"
+          ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "sL5D4Z7Jzb8r",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "1d29379f-2378-42ff-a767-44f409582420"
+        "id": "vzceFGcDmtrw"
       },
       "source": [
-        "bin(10)"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'0b1010'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
+        "#### "
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lXfdrFFrmtr1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0NWgir__mwGD"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "VwTaSQW5mwGD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7RWTIiPXmwI2"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "x-kwRCDdmwI2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RsNw0SxrmwLi"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Muuu4BgrmwLj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R8LKjl8NmwON"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "J6_Ha7IcmwOS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
